# minizip

./: CMakeLists.txt  minizip.pc.cmakein  minizipdef.h  unzip.h  zip.h
aes/: CMakeLists.txt
cmake/: External.cmake  MiniZipConfig.cmake.in  MiniZipConfigVersion.cmake.in  SuperFind.cmake
